--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 a {
     text-decoration: none;
-    color: #053161;
+    color: #CDFF00;
     font-weight: 700;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 12px;
@@ -12,7 +12,7 @@ a:hover{
 
 
 body{
-    background-color: #BED9DA;
+    background-color: #000;
 }
 
 p{
