--- a/style.css
+++ b/style.css
@@ -1,28 +1,59 @@
-a {
-    text-decoration: none;
-    color: #CDFF00;
-    font-weight: 700;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 12px;
-}
-
-a:hover{
-    color: #FF6A34;
-}
-
-
-body{
-    background-color: #1F222C;
-}
-
-p{
+ /* Importing Custom Font */
+ @font-face {
+    font-family: "SF pro"; /* Specify the font name */
+    src: url(".font/SF-Pro.ttf") format("ttf");
+    font-weight: normal;
+    font-style: normal;
+  }
+  html {
+    font-size: 62.5%;
+  }
+  :root {
+    --primary-bg: #1f222c;
+    --primary-font: #b9ff66;
+  }
+  /* Internal Styles */
+  body {
+    font-family: "SF pro", sans-serif; /* Using the custom font */
+    background-color: var(--primary-bg);
+    color: var(--primary-font);
     margin: 0;
-    width: 100%;
-    height: 100vh;
-    justify-content: center;
-    align-items: center;
+    overflow: hidden;
+  }
+  p {
+    margin: 0;
+  }
+  main {
     display: flex;
-    }
+    justify-content: center;
+    flex-direction: column;
+    height: 100vh;
+    overflow: hidden;
+    padding: 0 8rem;
+    gap: 25%;
+  }
+
+  .title {
+    margin: 0;
+    font-size: 19.8rem;
+    line-height: 15.8rem;
+  }
+  .block {
+    display: block;
+  }
+  .mb-8 {
+    margin-bottom: 0.8rem;
+  }
+  footer {
+    display: flex;
+    justify-content: space-between;
+    font-size: 1.4rem;
+    line-height: 1.5rem;
+  }
+  .left-section {
+    display: flex;
+    gap: 24rem;
+  }
 
     .hover-glitch{
 &:hover{
